--- a/3/spa/css/spa.css
+++ b/3/spa/css/spa.css
@@ -4,9 +4,30 @@
 */
 
 /** Begin reset */
-* {}
-h1,h2,h3,h4,h5,h6,p {}
-ol,ul,dl {}
+* {
+  margin : 0;
+  padding : 0;
+
+  box-sizing : border-box;
+  -webkit-box-sizing : border-box;
+  -moz-box-sizing    : border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-bottom : 10px;
+}
+
+ol,
+ul,
+dl {
+  list-style-position : inside;
+}
 /** End reset */
 
 /** Begin standard selectors */
