--- a/3/spa/css/spa.css
+++ b/3/spa/css/spa.css
@@ -31,11 +31,30 @@ dl {
 /** End reset */
 
 /** Begin standard selectors */
-body {}
-a {}
-strong {}
-/** End standard selectors */
+body {
+  font : 13px 'Trebuchet MS', Verdana, Helvetica, Arial, sans-serif;
+  color : #444;
+  background-color: #888;
+}
 
+a {
+  text-decoration: none;
+}
+
+a:link,
+a:visited {
+  color : inherit;
+}
+
+a:hover {
+  text-decoration : underline;
+}
+
+strong {
+  font-weight : 800;
+  color : #000;
+}
+/** End standard selectors */
 
 /** Begin spa namespace selectors */
 #spa {
