--- a/3/spa/css/spa.css
+++ b/3/spa/css/spa.css
@@ -5,10 +5,10 @@
 
 /** Begin reset */
 * {
-  margin : 0;
+  margin  : 0;
   padding : 0;
 
-  box-sizing : border-box;
+  box-sizing         : border-box;
   -webkit-box-sizing : border-box;
   -moz-box-sizing    : border-box;
 }
@@ -32,7 +32,7 @@ dl {
 
 /** Begin standard selectors */
 body {
-  font : 13px 'Trebuchet MS', Verdana, Helvetica, Arial, sans-serif;
+  font  : 13px 'Trebuchet MS', Verdana, Helvetica, Arial, sans-serif;
   color : #444;
   background-color: #888;
 }
@@ -51,30 +51,36 @@ a:hover {
 }
 
 strong {
+  color       : #000;
   font-weight : 800;
-  color : #000;
+
 }
 /** End standard selectors */
 
 /** Begin spa namespace selectors */
 #spa {
   position: absolute;
-  top : 8px;
-  left : 8px;
-  bottom : 8px;
-  right : 8px;
+  top     : 8px;
+  left    : 8px;
+  bottom  : 8px;
+  right   : 8px;
 
   min-height : 500px;
-  min-width : 500px;
-  overflow : hidden;
+  min-width  : 500px;
+  overflow   : hidden;
 
   background-color : #fff;
-  border-radius : 0 8px 0 8px;
+  border-radius    : 0 8px 0 8px;
 }
 /** End spa namespace selectors */
 
 /** Begin utility selectors */
 .spa-x-select {}
-.spa-x-clearfloat {}
+.spa-x-clearfloat {
+  height     : 0      !important;
+  float      : none   !important;
+  visibility : hidden !important;
+  clear      : both   !important;
+}
 /** End utility selectors */
 
