--- a/3/spa/css/spa.shell.css
+++ b/3/spa/css/spa.shell.css
@@ -78,13 +78,19 @@
   height : 40px;
 }
 .spa-shell-chat {
-  bottom     : 0;
-  right      : 0;
-  width      : 300px;
-  height     : 15px;
-  background : #FF0000;
-  z-index    : 1;
+  bottom        : 0;
+  right         : 0;
+  width         : 300px;
+  height        : 15px;
+  cursor        : pointer;
+  background    : #FF0000;
+  border-radius : 5px 0 0 0;
+  z-index       : 1;
 }
+  .spa-shell-chat:hover {
+    background : #AA0000;
+  }
+
 .spa-shell-modal {
   margin-top    : -200px;
   margin-left   : -200px;
