--- a/4/spa/css/spa.chat.css
+++ b/4/spa/css/spa.chat.css
@@ -2,3 +2,128 @@
  * spa.chat.css
  * Chat feature styles
 */
+
+/* Define spa-chat class for the chat slider */
+.spa-chat {
+  position      : absolute;
+  bottom        : 0;
+  right         : 0;
+  width         : 25em;
+  height        : 2em;
+  background    : #FFFFFF;
+  border-radius : 0.5em 0 0 0;
+  border-style  : solid;
+  border-width  : thin 0 0 thin;
+  border-color  : #888888;
+  box-shadow    : 0 0 0.75em 0 #888888;
+  z-index       : 1;
+}
+
+.spa-chat-head,
+.spa-chat-closer {
+  position      : absolute;
+  top           : 0;
+  height        : 2em;
+  line-height   : 1.8em;
+  border-bottom : thin solid #888888;
+  cursor        : pointer;
+  background    : #888888;
+  color         : #FFFFFF;
+  font-family   : arial, helvetica, sans-serif;
+  font-weight   : 800;
+  text-align    : center;
+}
+
+.spa-chat-head {
+  left          : 0;
+  right         : 2em;
+  border-radius : 0.3em 0 0 0;
+}
+
+.spa-chat-closer {
+  right : 0;
+  width : 2em;
+}
+.spa-chat-closer:hover {
+  background : #800000;
+}
+
+.spa-chat-head-toggle {
+  position      : absolute;
+  top           : 0;
+  left          : 0;
+  width         : 2em;
+  bottom        : 0;
+  border-radius : 0.3em 0 0 0;
+}
+
+/* Negative margin for centering */
+.spa-chat-head-title {
+  position    : absolute;
+  left        : 50%;
+  width       : 16em;
+  margin-left : -8em;
+}
+
+/* Fixed-size element to contain slider contents */
+.spa-chat-sizer {
+  position : absolute;
+  top      : 2em;
+  left     : 0;
+  right    : 0;
+}
+
+/* Overflow x-axis is hidden */
+.spa-chat-msgs {
+  position : absolute;
+  top      : 1em;
+  left     : 1em;
+  right    : 1em;
+  bottom   : 4em;
+  padding  : 0.5em;
+  border   : thin solid #888888;
+  overflow-x : hidden;
+  overflow-y : scroll;
+}
+
+.spa-chat-box {
+  position : absolute;
+  height   : 2em;
+  left     : 1em;
+  right    : 1em;
+  bottom   : 1em;
+  border   : thin solid #888888;
+  background : #888888;
+}
+
+.spa-chat-box input[type=text] {
+  float      : left;
+  width      : 75%;
+  height     : 100%;
+  padding    : 0.5em;
+  border     : 0;
+  background : #DDDDDD;
+  color      : #404040;
+}
+.spa-chat-box input[type=text]:focus {
+  background : #FFFFFF;
+}
+
+.spa-chat-box div {
+  float       : left;
+  width       : 25%;
+  height      : 2em;
+  line-height : 1.9em;
+  text-align  : center;
+  color       : #FFFFFF;
+  font-weight : 800;
+  cursor      : pointer;
+}
+.spa-chat-box div:hover {
+  background-color: #444444;
+  color      : #FFFF00;
+}
+
+.spa-chat-head:hover .spa-chat-head-toggle {
+  background : #AAAAAA;
+}
